# RobustMovers

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.devcontainer/: devcontainer.json
Controllers/: README.md
Controllers/include/: constrained_controller.hpp  constrained_controller_passive.hpp  controller.hpp  controller_ID_robust.hpp  controller_adaptive.hpp  controller_armour.hpp  controller_direct_adaptive.hpp  controller_passive.hpp  controller_robust.hpp  utils.hpp
Controllers/src/: controller_ID_robust.cpp  controller_adaptive.cpp  controller_armour.cpp  controller_direct_adaptive.cpp  controller_passive.cpp  controller_robust.cpp
Dynamics/: README.md
Dynamics/include/: dynamics.hpp  dynamics_Yphi.hpp  dynamics_pinocchio.hpp  headers.hpp  model.hpp  operational_space_inverse_kinematics.hpp  spatial.hpp  utils.hpp
Dynamics/src/: dynamics_Yphi.cpp  dynamics_pinocchio.cpp  model.cpp  operational_space_inverse_kinematics.cpp  spatial.cpp
Examples/Kinova/: CMakeLists.txt  README.md  kinova_constants.hpp  kinova_model_parameters.yaml
Examples/Kinova/JointSpaceControl/: kinova_controller_ID_robust_pybind.cpp  kinova_controller_ID_robust_pybindwrapper.cpp  kinova_controller_ID_robust_pybindwrapper.hpp  kinova_controller_adaptive_pybind.cpp  kinova_controller_adaptive_pybindwrapper.cpp  kinova_controller_adaptive_pybindwrapper.hpp  kinova_controller_armour_pybind.cpp  kinova_controller_armour_pybindwrapper.cpp  kinova_controller_armour_pybindwrapper.hpp  kinova_controller_direct_adaptive_pybind.cpp  kinova_controller_direct_adaptive_pybindwrapper.cpp  kinova_controller_direct_adaptive_pybindwrapper.hpp  kinova_controller_robust_pybind.cpp  kinova_controller_robust_pybindwrapper.cpp  kinova_controller_robust_pybindwrapper.hpp  kinova_dynamics.py  test_simulation.py  test_simulation_ID_robust.py  test_simulation_adaptive.py  test_simulation_direct_adaptive.py  test_simulation_gravpid.py
Robots/digit-v3/: digit-v3-armfixed-floatingbase-springfixed.urdf  digit-v3-armfixed-floatingbase.urdf  digit-v3-armfixed.urdf  digit-v3-fixedbase-springfixed-armfixed.urdf  digit-v3-fixedbase-springfixed.urdf  digit-v3-floatingbase-springfixed.urdf  digit-v3-modified-pinned.urdf
Robots/kinova-gen3/: kinova.urdf
Tests/: DynamicsTest.cpp  ReadRobotInfoTest.cpp  RegressorTest.cpp  adaptive_test.cpp
docker/: Dockerfile
docker/scripts/: install-eigen.sh  install-pinocchio-dependencies.sh  install-pinocchio.sh
